# OpenGL-test

./: .gitmodules  CMakeLists.txt  README.md  all.bat  build.bat  run.bat
glad/: CMakeLists.txt  glad.c
glad/glad/: glad.h
resources/shaders/: sh1.fs  sh1.vs
src/: Drawable.cpp  Drawable.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Shader.cpp  Shader.h  main.cpp
src/Core/: ComponentManager.hpp  EntityManager.hpp
src/Systems/: RenderSystem.cpp  RenderSystem.hpp
src/components/: MeshRenderer.hpp  Transform.hpp
src/core/: ComponentArray.hpp  Coordinator.hpp  EntityManager.hpp  Shader.hpp  System.hpp  SystemManager.hpp  Texture.hpp  Types.hpp  View.hpp
src/math/: Vec2.hpp  Vec3.hpp  Vec4.hpp
src/meshes/: TriangleMesh.hpp
src/systems/: RenderSystem.cpp  RenderSystem.hpp
